--- a/src/CustomersTable.css
+++ b/src/CustomersTable.css
@@ -14,3 +14,22 @@
 .sort-dropdown {
     width: 180px;
 }
+.Search-Customer{
+    margin-right: 40px;
+    width: 200px;
+    text-align: left;
+    font-weight: 200;
+}
+.dropDown-shortby{
+    margin-right: 0px;
+}
+.active-button{
+    border-color: #00AC4F;
+    color: #00AC4F;
+    background-color: #A6E7D8;
+}
+.inactive-button{
+    border-color: #DF0606;
+    background-color: #FFC5C5;
+    color: #DF0606;
+}
